# ros2_control_example

./: README.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: controlnote.hpp  multi_link_pos.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/detail/: controlnote__functions.h  controlnote__rosidl_typesupport_fastrtps_c.h  controlnote__rosidl_typesupport_introspection_cpp.hpp  controlnote__struct.h  controlnote__type_support.h  multi_link_pos__builder.hpp  multi_link_pos__functions.h  multi_link_pos__rosidl_typesupport_fastrtps_c.h  multi_link_pos__rosidl_typesupport_introspection_cpp.hpp  multi_link_pos__struct.h  multi_link_pos__struct.hpp  multi_link_pos__traits.hpp  multi_link_pos__type_support.c
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: _custom_interfaces_s.ep.rosidl_typesupport_c.c  (+1 more)
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake
install/custom_interfaces/share/custom_interfaces/msg/: Controlnote.msg  MultiLinkPos.idl  MultiLinkPos.msg
install/multi_link_controller/include/multi_link_controller/: multi_link_controller.hpp
install/multi_link_controller/share/ament_index/resource_index/parent_prefix_path/: multi_link_controller
install/multi_link_controller/share/multi_link_controller/: local_setup.sh  multi_link_controller.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/multi_link_controller/share/multi_link_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  multi_link_controllerConfig.cmake
install/multi_link_controller/share/multi_link_controller/config/: multi_link_controller_custom.yaml
install/my_controller/include/my_controller/: my_controller.hpp
install/my_controller/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: my_controller
install/my_controller/share/my_controller/: local_setup.sh  package.dsv  package.ps1  package.sh
install/my_controller/share/my_controller/cmake/: my_controllerConfig.cmake
install/my_controller/share/my_controller/config/: my_controllers_custom.yaml
install/my_controller2/share/my_controller2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_controller2/share/my_controller2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  my_controller2Config.cmake
install/my_controller2/share/my_controller2/config/: my_controller2_custom.yaml
install/my_fake_hardware_SDK/share/my_fake_hardware_SDK/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_fake_hardware_SDK/share/my_fake_hardware_SDK/cmake/: my_fake_hardware_SDKConfig.cmake
install/my_hardware_interface/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: my_hardware_interface
install/my_hardware_interface/share/ament_index/resource_index/package_run_dependencies/: my_hardware_interface
install/my_hardware_interface/share/my_hardware_interface/: local_setup.sh  my_hardwares.xml  package.bash  package.sh  package.zsh
install/robot_model/share/ament_index/resource_index/parent_prefix_path/: robot_model
install/robot_model/share/robot_model/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_model/share/robot_model/description/: gazebo.xacro  gazebo_ros2_control.xacro  include.xacro  robot.urdf.xacro
install/robot_model/share/robot_model/launch/: gazeobo_sim.launch.py
log/: latest_build
src/custom_interfaces/: CMakeLists.txt  README.md
src/multi_link_controller/: CMakeLists.txt
src/multi_link_controller/include/multi_link_controller/: multi_link_controller.hpp
src/multi_link_controller/src/: multi_link_controller.cpp
src/my_controller/: CMakeLists.txt  README.md  my_controller.xml  package.xml
src/my_controller/config/: my_controllers_custom.yaml
src/my_controller/src/: my_controller.cpp
src/my_controller2/: CMakeLists.txt  README.md  my_controller2.xml
src/my_controller2/include/my_controller2/: my_controller2.hpp
src/my_controller2/src/: my_controller2.cpp
src/my_fake_hardware_SDK/: CMakeLists.txt  README.md
src/my_fake_hardware_SDK/include/my_fake_hardware_SDK/: my_fake_hardware_SDK.hpp
src/my_fake_hardware_SDK/src/: my_fake_hardware_SDK.cpp
src/my_hardware_interface/: CMakeLists.txt  README.md  package.xml
src/my_hardware_interface/include/my_hardware_interface/: my_hardware_interface.hpp
src/my_hardware_interface/src/: my_hardware_interface.cpp
src/robot_model/: CMakeLists.txt  README.md  package.xml
src/robot_model/config/: my_controllers_for_fake_hardware_interface.yaml
src/robot_model/description/: gazebo.xacro  gazebo_ros2_control.xacro  robot.urdf.xacro  ros2_control_custom_hardware_interface.xacro  test_ros2_control.urdf.xacro
src/robot_model/launch/: robot_state_publisher_launch.py  test_ros2_control.launch.py
(+2 files in other folders)
